[package]
name = "jolt"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "A note taking web-app"
repository = "https://github.com/NewDawn0/jolt"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
web-sys = { version = "0.3.83", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  "WebGlUniformLocation",
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'Window',
] }
